--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "homepage": "https://github.com/waveiro/testing-snowpack#readme",
   "devDependencies": {
-    "snowpack": "^3.0.11"
+    "snowpack": "^3.0.11",
+    "@snowpack/plugin-sass": "^1.3.0"
   },
   "dependencies": {
     "lodash": "^4.17.20",
